some phpstan fixes

--- a/composer.json
+++ b/composer.json
@@ -105,5 +105,10 @@
       ]
     }
   },
-  "license": "AGPL-3.0-or-later"
+  "license": "AGPL-3.0-or-later",
+  "config": {
+    "allow-plugins": {
+      "pyrech/composer-changelogs": true
+    }
+  }
 }
