add possibility to search with several metadata fields

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -43,6 +43,13 @@ services:
             - SITE_URL=https://elab.local:3148
             - ELAB_AWS_ACCESS_KEY=yep
             - ELAB_AWS_SECRET_KEY=yop
+            - ELABFTW_USER=ktr
+            # default value: nginx
+            - ELABFTW_GROUP=ktr
+            # default value: 101
+            - ELABFTW_USERID=1000
+            # default value: 101
+            - ELABFTW_GROUPID=1000
         volumes:
             - ..:/elabftw
             - ../_coverage:/elabftw/tests/_output/coverage
