--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,11 +28,14 @@ jobs:
           name: prepare docker-compose.yml
           # Don't bind mount here, files are copied. See scrutinizer.dockerfile
           # first backslash enables different delimiter than slash
+          # remove env_file section
           command: |
               sed -i '\#volumes:#D' tests/docker-compose.yml
               sed -i '\#- \.\.:/elabftw#D' tests/docker-compose.yml
               sed -i '\#/elabftw/tests/_output/coverage#D' tests/docker-compose.yml
               sed -i 's#elabftw/elabimg:hypernext#elabtmp#' tests/docker-compose.yml
+              sed -i '\#env_file:#D' tests/docker-compose.yml
+              sed -i '\#- elabftw-user\.env#D' tests/docker-compose.yml
       - run:
           name: Build image and start elabtmp container
           command: |
