--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,8 +73,8 @@ jobs:
       - run:
           name: Build elabtmp image and start containers
           command: |
-              docker build -t elabtmp -f tests/scrutinizer.dockerfile --progress plain .
-              docker-compose -f tests/docker-compose.yml up -d --quiet-pull
+              docker build -t elabtmp -f tests/scrutinizer.dockerfile -q .
+              docker compose -f tests/docker-compose.yml up -d --quiet-pull
       - run:
           name: Save docker images elabimg and mysql for cache
           command: |
