--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,21 +31,13 @@ jobs:
           command: |
               REPO=elabftw/elabimg
               TAG=hypernext
-              curl -s -H "Authorization: Bearer $DOCKERHUB_PULL_TOKEN" \
-                  -H "Accept: application/vnd.docker.distribution.manifest.v2+json" \
-                  https://index.docker.io/v2/$REPO/manifests/$TAG
-              IMAGE_DIGEST=$(curl -s -H "Authorization: Bearer $DOCKERHUB_PULL_TOKEN" \
-                  -H "Accept: application/vnd.docker.distribution.manifest.v2+json" \
-                  https://index.docker.io/v2/$REPO/manifests/$TAG \
-                  | jq -r .config.digest)
+              TOKEN=$(curl -s "https://auth.docker.io/token?service=registry.docker.io&scope=repository:$REPO:pull" | jq -r .token)
+              IMAGE_DIGEST=$(curl -s -H "Authorization: Bearer $TOKEN" -H "Accept: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/$REPO/manifests/$TAG | jq -r .config.digest)
               echo $IMAGE_DIGEST >> elabimg-key.txt
-              cat elabimg-key.txt
               REPO=library/mysql
               TAG=8.0
-              IMAGE_DIGEST=$(curl -s -H "Authorization: Bearer $DOCKERHUB_PULL_TOKEN" \
-                  -H "Accept: application/vnd.docker.distribution.manifest.v2+json" \
-                  https://index.docker.io/v2/$REPO/manifests/$TAG \
-                  | jq -r .config.digest)
+              TOKEN=$(curl -s "https://auth.docker.io/token?service=registry.docker.io&scope=repository:$REPO:pull" | jq -r .token)
+              IMAGE_DIGEST=$(curl -s -H "Authorization: Bearer $TOKEN" -H "Accept: application/vnd.docker.distribution.manifest.v2+json" https://index.docker.io/v2/$REPO/manifests/$TAG | jq -r .config.digest)
               echo $IMAGE_DIGEST >> mysql-key.txt
       - restore_cache:
           keys:
