make it work again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,28 +51,27 @@ jobs:
               echo $IMAGE_DIGEST >> mysql-key.txt
       - restore_cache:
           keys:
-            - v1-elabcibase-dep-{{ checksum "elabcibase-key.txt" }}
-      # ToDo: Should be skipped if elabcibase is there
+            - v1-elabimg-dep-{{ checksum "elabimg-key.txt" }}
       - restore_cache:
           keys:
-            - v1-elabimg-dep-{{ checksum "elabimg-key.txt" }}
+            - v1-elabcibase-dep-{{ checksum "elabcibase-key.txt" }}
       - restore_cache:
           keys:
             - v1-mysql-dep-{{ checksum "mysql-key.txt" }}
       - run:
           name: Load docker images from cache
           command: |
+              echo 'export HAS_ELABIMG_CACHE="false"' >> $BASH_ENV
+              if [ -f ./elabimg-hypernext.tar ]; then
+                  docker image load -q -i elabimg-hypernext.tar
+                  rm elabimg-hypernext.tar
+                  echo 'export HAS_ELABIMG_CACHE="true"' >> $BASH_ENV
+              fi
               echo 'export HAS_ELABCIBASE_CACHE="false"' >> $BASH_ENV
               if [ -f ./elabcibase.tar ]; then
                   docker image load -q -i elabcibase.tar
                   rm elabcibase.tar
                   echo 'export HAS_ELABCIBASE_CACHE="true"' >> $BASH_ENV
-              fi
-              echo 'export HAS_ELABIMG_CACHE="false"' >> $BASH_ENV
-              if [ "${HAS_ELABCIBASE_CACHE}" == "false" ] && [ -f ./elabimg-hypernext.tar ]; then
-                  docker image load -q -i elabimg-hypernext.tar
-                  rm elabimg-hypernext.tar
-                  echo 'export HAS_ELABIMG_CACHE="true"' >> $BASH_ENV
               fi
               echo 'export HAS_MYSQL_CACHE="false"' >> $BASH_ENV
               if [ -f ./mysql-8.0.tar ]; then
@@ -95,15 +94,13 @@ jobs:
       - run:
           name: Build elabtmp image
           command: |
-              if [ "${HAS_ELABCIBASE_CACHE}" == "false" ]; then
-                  source tests/ci-tool-versions.env
-                  docker build -t elabcibase \
-                      -f tests/scrutinizer.dockerfile \
-                      --build-arg PHPSTAN_VERSION \
-                      --build-arg PSALM_VERSION \
-                      --build-arg PHAN_VERSION \
-                      --target elabcibase .
-              fi
+              source tests/ci-tool-versions.env
+              docker build -t elabcibase \
+                  -f tests/scrutinizer.dockerfile \
+                  --build-arg PHPSTAN_VERSION \
+                  --build-arg PSALM_VERSION \
+                  --build-arg PHAN_VERSION \
+                  --target elabcibase .
               docker build -t elabtmp -f tests/scrutinizer.dockerfile --target elabtmp .
       - run:
           name: Start containers
